# letterbounced

./: .gitignore  Cargo.toml  build-dictionary.sh  build-web.sh
.cargo-husky/hooks/: pre-commit
.github/workflows/: deploy.yml
src/: board.rs  dictionary.rs  dictionary_builder.rs  main.rs  solver.rs  wasm.rs
web/svelte-app/src/: App.svelte
web/svelte-app/src/lib/: LetterBox.svelte  PlayerSolution.svelte  PuzzleLoader.svelte  SolutionsDisplay.svelte
web/svelte-app/src/stores/: puzzle.ts  solver-worker.ts
web/svelte-app/src/workers/: solver-worker.ts
web/svelte-app/tests/: basic.spec.js
