[package]
name = "letter_bounced"
version = "0.1.0"
edition = "2021"
authors = ["Neil Kandalgaonkar <neilk@neilk.net>"]
license = "ISC"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

[lib]
name = "letter_bounced"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "letter-bounced"
path = "src/main.rs"

[[bin]]
name = "dictionary-builder"
path = "src/dictionary_builder.rs"

