[package]
name = "letter_bounced"
version = "0.1.0"
edition = "2021"
authors = ["Neil Kandalgaonkar <neilk@neilk.net>"]
license = "ISC"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }

[lib]
name = "letter_bounced"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "letter-bounced"
path = "src/main.rs"

[[bin]]
name = "dictionary-builder"
path = "src/dictionary_builder.rs"

[lints.clippy]
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
